--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>اسم موقعك - خدمات رقمية احترافية</title>
     <meta name="description" content="أقدم خدمات برمجية وتصميمية عالية الجودة، including أكواد مخصصة، templates، واستشارات تقنية.">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="/Mhd/css/style.css">
+    <link rel="stylesheet" href="/Mhd/css/utilities.css">
 </head>
 <body>
     <!-- شريط التنقل -->
@@ -64,6 +64,6 @@
         <a href="privacy-policy.html">سياسة الخصوصية</a>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="/Mhd/js/script.js"></script>
 </body>
 </html>
